--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="balls"></p>
     <table id="board"></table>
     <br>
-    <button onclick="newGame()">new game</button>
+    <button onclick="restart()">restart</button>
     <h1 id="msg"></h1>
 </body>
 <script src="controller.js"></script>
